2001-07-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm.spec.in:
	removed todo-2.4 and todo-3.0 from rpm

2001-07-03  Mikhael Goikhman  <migo@homemail.com>

	rpm/fvwm.spec.in:
	add files ChangeLog, todo-2.4 and todo-3.0 to rpm

2001-05-27  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	by default use --without-rplay-library

2001-05-14  olicha  <olivier.chapuis@free.fr>

	* fvwm.spec.in:
	translated lang=fr

2001-03-31  Mikhael Goikhman  <migo@homemail.com>

	* fvwm.spec.in:
	translated lang=ru; not translated lang=fr

2001-01-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm.spec.in:
	renamed --enable-kanji to --enable-multibyte

2000-11-08  Mikhael Goikhman  <migo@homemail.com>

	* rpm/Makefile.am:
	* rpm/fvwm.spec.in:
	don't use redhat hadcoded SOURCES dir, pass a tarball in /tmp,
	use /usr prefix, small changes

2000-10-12  Mikhael Goikhman  <migo@homemail.com>

	* rpm/Makefile.am:
	* rpm/fvwm.spec.in:
	configure and make params can now be specified:
	make rpm cparams='--enable-kanji --without-gnome' mparams='CFLAGS="-g"'

2000-09-24  Mikhael Goikhman  <migo@homemail.com>

	* rpm/Makefile.am:
	* rpm/fvwm.spec.in:
	updated to work with older /bin/rpm, don't compile with -g and more

2000-09-16  Mikhael Goikhman  <migo@homemail.com>

	* rpm/Makefile.am:
	* rpm/fvwm.spec.in:
	added files and rules for generating rpm archives