@@ -1,3 +1,9 @@
+2001-07-08  Mikhael Goikhman  <migo@homemail.com>
+
+	* Makefile.am:
+	* fvwm.spec.in:
+	use --sysconfdir=/etc
+
 2001-07-03  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm.spec.in:
